<resources>
    <string name="app_name">KEEP MOVIN\'</string>
    <string name="app_development_studio">appsturdev</string>
    <string name="title_activity_maps">Mapa</string>
    <string name="to_map">Empezar ruta</string>
    <string name="to_history">Historial</string>
    <string name="to_stadistics">Estadísticas</string>
    <string name="to_gallery">Galería</string>
    <string name="prefs">Preferencias</string>
    <string name="start">Iniciar</string>
    <string name="stop">Detener</string>
    <string name="acept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="about">Acerca de...</string>
    <string name="caputure_waypoint">Genera punto de interés</string>
    <string name="distance">Distancia: </string>
    <string name="time">Duración: </string>
    <string name="date">Fecha: </string>
    <string name="start_at">Hora inicio: </string>
    <string name="delete">Eliminar</string>
    <string name="modify_title">Editar nombre</string>
    <string name="export_gpx">Exportar fichero GPX</string>
    <string name="export_kml">Exportar fichero KML</string>
    <string name="save">Guardar</string>
    <string name="share">Compartir</string>
    <string name="title_dialog_route_type">Selecciona el tipo de ruta: </string>
    <string name="biking">En bicicleta</string>
    <string name="running">Corriendo</string>
    <string name="hiking">Andando</string>
    <string name="title_dialog_media_type">¿Qué quieres hacer?</string>
    <string name="photo">Fotografía</string>
    <string name="movie">Vídeo</string>
    <string name="altitude">Altura</string>
    <string name="succesful_export">Fichero exportado correctamente</string>
    <string name="error_export">Se ha producido un error al exportar fichero</string>
    <string name="title_dialog_persist_route">Ruta generada</string>
    <string name="msn_dialog_persist_route">¿Quieres guardar la ruta?</string>
    <string name="routeTypeTitleDialog">Selecciona el tipo de ruta.</string>
    <string name="pleaseStopTrackng">Finalice la grabación.</string>
    <string name="no_photo">No se ha realizado ninguna fotografía</string>
    <string name="no_video">No se ha realizado ningún vídeo</string>
    <string name="waiting_position">Esperando posicionamiento</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_line_chart">LineChartActivity</string>
    <string name="title_activity_chart">ChartActivity</string>

    <string name="new_name">Introduzca nuevo nombre</string>
    <string name="perfil">Perfil longitudinal</string>

    <string name="error_record">No se ha obtenido ningún posicionamiento</string>



</resources>
