<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.marcostoral.keepmoving.activities.MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="35sp"
        android:textColor="@color/colorPrimary"
        android:id="@+id/tvAppName" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_development_studio"
        android:textSize="15sp"
        android:textColor="@color/colorPrimary"
        android:id="@+id/tvAppName2" />

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="100sp" />

    <Button
        android:text="@string/to_map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvAppName"
        android:layout_centerHorizontal="true"
        android:id="@+id/btnMaps" />

    <Button
        android:text="@string/to_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnMaps"
        android:layout_alignRight="@+id/btnMaps"
        android:layout_alignEnd="@+id/btnMaps"
        android:id="@+id/btnHistory" />

    <Button
        android:text="@string/to_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnHistory"
        android:layout_alignLeft="@+id/btnHistory"
        android:layout_alignStart="@+id/btnHistory"
        android:id="@+id/btnStadistics" />
</LinearLayout>
