<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    tools:context="com.marcostoral.keepmoving.fragments.MapsEnvironmentFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivCurrentType"
            android:layout_gravity="center"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="5dp"
            />


        <LinearLayout
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_weight="60"
        android:orientation="vertical">

            <Chronometer
                android:id="@+id/chrono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textAlignment="center"
                android:padding="5dp"
                />

             <TextView
                 android:textSize="20sp"
                 android:textAlignment="center"
                 android:gravity="center_vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:id="@+id/tvCurrentDistance"
                 />

        </LinearLayout>

        <ImageButton
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:src="@android:drawable/ic_menu_camera"
            android:background="@color/colorAccent"
            android:id="@+id/ibWaypoint"
            android:contentDescription="@string/caputure_waypoint" />
    </LinearLayout>

    <Button
        android:text="@string/start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnStart"
        android:visibility="visible"
        android:background="@color/colorAccent"
        android:layout_gravity="bottom"
        />
    <Button
        android:text="@string/stop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnStop"
        android:visibility="invisible"
        android:background="@color/colorAccent"
        android:layout_gravity="bottom"
        />
    <Button
        android:text="@string/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnSave"
        android:visibility="invisible"
        android:background="@color/colorAccent"
        android:layout_gravity="bottom"
        />


</FrameLayout>
